backend/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: backend-rollout
  namespace: backend 
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
      version: blue
  template:
    metadata:
      labels:
        app: backend
        version: blue
    spec:
      containers:
      - name: backend
        image: 983460235393.dkr.ecr.ap-northeast-2.amazonaws.com/ssh-backend:0.1.0
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
    strategy:
      blueGreen:
        activeService: backend-active
        previewService: backend-preview
        autoPromotionEnabled: true
        scaleDownDelaySeconds: 30
