backend/base/service-active.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-active
  namespace: backend 
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: backend
    version: blue
  type: ClusterIP
