backend/base/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-preview
  namespace: backend 
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: backend
    version: green
  type: ClusterIP
